[package]
name = "snake"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

[dependencies]
rand = "0.3"
x11_client = { git = "https://github.com/mokomull/x11_client.git" }
byteorder = "1.0"
futures-preview = { version = "0.3.0-alpha.14" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "master" }
